syntax = "proto2";

package com.example.protos;

/**
 * Сообщения приветствия и прощания
 *
 * This file is really just an example. The data model is completely
 * fictional.
 */


/**
 * Сервис Приветствия и прощания
 */
service Greeter {
    /// Обработать запрос
    rpc SayHello (Request) returns (Response) {}
}

/**
 * Базовый контейнер для запросов к серверу
 */
message Request {
    required int32 id = 1 ; /// Id Запроса
    oneof body {
        HelloRequest hello = 2;
        ByeRequest bye = 3;
    }
}

/**
 * Базовый контейнер для
 *  ответов от сервера
 */
message Response {
    required int32 id = 1; // Id Запроса
    oneof body {
        HelloResponse hello = 2;
        ByeRequest bye = 3;
    }
}



message HelloRequest { /// Запрос приветсвия
    required string name = 2;
}


message ByeRequest { /// Запрос прощания
    required string name = 2;
}

/// Ответ сервера на приветствие
message HelloResponse {
    required string message = 1;
}

/// Ответ сервера на прощание
message ByeResponse {
    required string message = 1;
}